--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="h-full w-full" lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/images/icon.png" sizes="10689x10689" />
+    <link rel="icon" type="image/png" href="/logo.png" sizes="any" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body class="w-full __scrollbar h-full">
